--- a/Restaurant Ordering System/public_html/Customer/customer_order.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_order.html
@@ -8,20 +8,30 @@
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans min-h-screen flex flex-col">
 
+<!-- Header -->
 <header class="bg-white border-b border-gray-200">
   <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-    <!-- Left side: logo/title -->
-    <div class="flex items-center gap-3">
-      <h1 class="text-xl sm:text-2xl font-semibold">Self Service Ordering</h1>
-    </div>
+    <h1 class="text-xl sm:text-2xl font-semibold">Self Service Ordering</h1>
 
-    <!-- Right side: navigation buttons -->
-    <nav class="flex items-center gap-2 ml-auto">
-      <a href="customer_main.html"
-         class="bg-gray-100 text-gray-800 px-3 py-1 rounded-md hover:bg-gray-200 transition">Home</a>
-      <a href="customer_login.html"
-         class="bg-blue-100 text-gray-800 px-3 py-1 rounded-md hover:bg-blue-200 transition">Login</a>
-    </nav>
+    <div class="relative">
+      <button id="menuButton"
+              class="flex items-center justify-center w-10 h-10 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition focus:outline-none">
+          <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
+             viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16" />
+        </svg>
+      </button>
+
+      <!-- Dropdown menu -->
+      <div id="menuDropdown"
+           class="hidden absolute right-0 mt-2 w-44 bg-white border border-gray-200 rounded-lg shadow-lg overflow-hidden z-50">
+        <a href="customer_login.html"
+           id="loginLogoutLink"
+           class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Login</a>
+        <a href="customer_main.html"
+           class="block px-4 py-2 text-gray-700 hover:bg-gray-100 border-t">Home</a>
+      </div>
+    </div>
   </div>
 </header>
 
@@ -180,6 +190,41 @@ document.addEventListener('DOMContentLoaded', () => {
 
 // Optional: auto-refresh every 10 seconds
 setInterval(loadOrders, 10000);
+</script>
+
+<script>
+  // Toggle dropdown visibility
+  const menuButton = document.getElementById('menuButton');
+  const menuDropdown = document.getElementById('menuDropdown');
+
+  menuButton.addEventListener('click', () => {
+    menuDropdown.classList.toggle('hidden');
+  });
+
+  // Close dropdown when clicking outside
+  document.addEventListener('click', (event) => {
+    if (!menuButton.contains(event.target) && !menuDropdown.contains(event.target)) {
+      menuDropdown.classList.add('hidden');
+    }
+  });
+
+  // Handle login/logout session
+  document.addEventListener('DOMContentLoaded', () => {
+    const loginLogoutLink = document.getElementById('loginLogoutLink');
+
+    if (CustomerSession.isLoggedIn()) {
+      loginLogoutLink.textContent = 'Logout';
+      loginLogoutLink.href = '#';
+      loginLogoutLink.addEventListener('click', (e) => {
+        e.preventDefault();
+        CustomerSession.clearSession();
+        window.location.href = 'customer_main.html';
+      });
+    } else {
+      loginLogoutLink.textContent = 'Login';
+      loginLogoutLink.href = 'customer_login.html';
+    }
+  });
 </script>
 
 </body>
