--- a/Restaurant Ordering System/public_html/Employee/employee_order.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_order.html
@@ -41,27 +41,18 @@
   <main class="flex-grow p-6 max-w-7xl mx-auto w-full">
     
     <!-- Pending Orders Section -->
-    <section class="mt-8">
-      <h2 class="text-2xl sm:text-3xl font-bold mb-4 text-gray-800 text-center sm:text-left">
-        Pending Customer Orders
-      </h2>
-
-      <div id="ordersGrid" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
-        <!-- Example Orders (You can later replace these with dynamic data) -->
-        <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col border border-gray-200">
-          <div class="p-4 flex flex-col flex-grow">
-            <p class="text-gray-700 text-sm flex-grow">Order #1 - Customer: Sean Paul - Total: $25.00</p>
-            <button class="bg-green-600 text-white px-3 py-1 rounded mt-2 hover:bg-green-700 transition">Confirm Order</button>
-          </div>
-        </div>
-        <div class="bg-white shadow rounded-lg overflow-hidden flex flex-col border border-gray-200">
-          <div class="p-4 flex flex-col flex-grow">
-            <p class="text-gray-700 text-sm flex-grow">Order #2 - Customer: Joe Lee - Total: $15.00</p>
-            <button class="bg-green-600 text-white px-3 py-1 rounded mt-2 hover:bg-green-700 transition">Confirm Order</button>
-          </div>
-        </div>
-      </div>
+    <section class="mt-2 mb-4 flex items-center justify-between">
+      <h2 class="text-2xl sm:text-3xl font-bold text-gray-800">Active Orders</h2>
+      <button id="refreshBtn"
+              class="bg-gray-100 text-gray-800 px-3 py-1 rounded border border-gray-300 hover:bg-gray-200 transition text-sm">
+        Refresh
+      </button>
     </section>
+
+    <section id="ordersGrid" class="grid gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
+      <!-- Cards will be injected here -->
+    </section>
+
 
     <!-- Optional Toast Notification -->
     <div id="toast" class="hidden fixed bottom-6 right-6 z-50"></div>
@@ -84,91 +75,157 @@
       setTimeout(() => toast.classList.add("hidden"), 2500);
     }
 
-async function updateOrderStatus(order_id, status) {
-  try {
-    const res = await fetch('/api/orders/updateStatus', {
-      method: 'PUT',
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ order_id, status })
-    });
+    // --- API helpers ---
+    async function updateOrderStatus(order_id, status) {
+      const res = await fetch('/api/orders/updateStatus', {
+        method: 'PUT',
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ order_id, status })
+      });
+
+      const data = await res.json();
+      if (!res.ok || !data.success) {
+        throw new Error(data.message || 'Failed to update order');
+      }
+      return data;
+    }
+
+    function statusPill(status) {
+      const s = (status || '').toLowerCase();
+      const map = {
+        'pending': 'bg-yellow-100 text-yellow-800',
+        'in progress': 'bg-blue-100 text-blue-800',
+        'completed': 'bg-green-100 text-green-800',
+        'cancelled': 'bg-red-100 text-red-800'
+      };
+      const cls = map[s] || 'bg-gray-100 text-gray-800';
+      return `<span class="px-2 py-0.5 rounded-full text-xs font-medium ${cls}">${status}</span>`;
+    }
+
+    function fmtTime(ts) {
+      try { return new Date(ts).toLocaleString(); } catch { return ts; }
+    }
 
 
-    const data = await res.json();
-    if (!data.success) throw new Error(data.message);
+  // --- MAIN LOAD ---
+  async function loadOrders() {
+    try {
+      const res = await fetch('/api/orders/active');
+      const data = await res.json();
 
-    showToast(`Order ${status}`);
-    loadOrders(); // Refresh orders list
+      const grid = document.getElementById('ordersGrid');
+      grid.innerHTML = '';
 
-  } catch (err) {
-    showToast("Failed to update order", "error");
-    console.error(err);
-  }
-}
+      if (!data.success || !data.orders.length) {
+        grid.innerHTML = `<p class="text-gray-500 col-span-full text-center">No active orders.</p>`;
+        return;
+      }
 
+      data.orders.forEach(o => {
+        const card = document.createElement('div');
+        card.className = "bg-white shadow rounded-lg overflow-hidden flex flex-col border border-gray-200 transition";
 
-    async function loadOrders() {
-      try {
-        const res = await fetch('/api/orders/active');
-        const data = await res.json();
+        const isInProgress = o.status === "In Progress";
 
-        const grid = document.getElementById('ordersGrid');
-        grid.innerHTML = '';
-
-        if (!data.success || !data.orders.length) {
-          grid.innerHTML = `<p class="text-gray-500 text-center col-span-full">No pending orders.</p>`;
-          return;
-        }
-
-        data.orders.forEach(o => {
-          const card = document.createElement('div');
-          card.className = "bg-white shadow rounded-lg overflow-hidden flex flex-col border border-gray-200";
-          card.innerHTML = `
-            <div class="p-4 flex flex-col flex-grow">
-              <p class="text-gray-700 text-sm flex-grow">
-               <strong> Order #${o.order_id}</strong> - Customer ID: ${o.customer_id ?? "—"} - Item ID: ${o.item_id} - Qty: ${o.quantity}
-              </p>
-
-
-            <div class="flex gap-2 mt-3">
-              <button class="flex-1 bg-blue-600 text-white px-3 py-1 rounded hover:bg-blue-700 transition">In Progress</button>
-              <button class="flex-1 bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700 transition">Confirm</button>
-              <button class="flex-1 bg-red-600 text-white px-3 py-1 rounded hover:bg-red-700 transition">Cancel</button>
+        card.innerHTML = `
+          <div class="p-4 flex flex-col gap-2">
+            <div class="flex items-center justify-between">
+              <h3 class="font-semibold text-gray-800">
+                #${o.order_id} — ${o.item_name} × ${o.quantity}
+              </h3>
+              ${statusPill(o.status)}
             </div>
+
+            <p class="text-sm text-gray-700">
+              <span class="font-medium">Customer:</span> ${o.customer_name}
+            </p>
+
+            <p class="text-xs text-gray-500">Placed: ${fmtTime(o.order_time)}</p>
+
+            <div class="flex gap-2 mt-2">
+              <button class="inprogress-btn flex-1 px-3 py-1 rounded text-white
+                      ${isInProgress ? "bg-blue-400 cursor-not-allowed opacity-50" : "bg-blue-600 hover:bg-blue-700"}">
+                In Progress
+              </button>
+
+              <button class="confirm-btn flex-1 bg-green-600 text-white px-3 py-1 rounded hover:bg-green-700 transition">
+                Confirm
+              </button>
+
+              <button class="cancel-btn flex-1 bg-red-600 text-white px-3 py-1 rounded hover:bg-red-700 transition">
+                Cancel
+              </button>
             </div>
+          </div>
         `;
 
 
-	/// Assign button actions
+          const inProgressBtn = card.querySelector('.inprogress-btn');
+          const confirmBtn    = card.querySelector('.confirm-btn');
+          const cancelBtn     = card.querySelector('.cancel-btn');
 
-        const [inProgressBtn, confirmBtn, cancelBtn] = card.querySelectorAll('button');
+          // If already In Progress, lock the button
+          if (isInProgress) {
+            inProgressBtn.disabled = true;
+          }
 
-if (o.status === "In Progress") {
-  inProgressBtn.disabled = true;
-  inProgressBtn.classList.add("opacity-50", "cursor-not-allowed");
-}
+          inProgressBtn.addEventListener('click', async () => {
+            if (inProgressBtn.disabled) return;
+            // Grey it out immediately
+            inProgressBtn.disabled = true;
+            inProgressBtn.classList.add('opacity-50', 'cursor-not-allowed');
+            try {
+              await updateOrderStatus(o.order_id, "In Progress");
+              showToast(`Order #${o.order_id} → In Progress`);
+              await loadOrders(); // refresh the grid
+            } catch (err) {
+              // Re-enable if failed
+              inProgressBtn.disabled = false;
+              inProgressBtn.classList.remove('opacity-50', 'cursor-not-allowed');
+              showToast(err.message || "Failed to update order", "error");
+            }
+          });
 
-inProgressBtn.addEventListener('click', () => {
-  updateOrderStatus(o.order_id, "In Progress");
-});
+          confirmBtn.addEventListener('click', async () => {
+            try {
+              await updateOrderStatus(o.order_id, "Completed");
+              showToast(`Order #${o.order_id} completed`);
+              await loadOrders();
+            } catch (err) {
+              showToast(err.message || "Failed to update order", "error");
+            }
+          });
 
-confirmBtn.addEventListener('click', () => {
-  updateOrderStatus(o.order_id, "Completed");
-});
+          cancelBtn.addEventListener('click', async () => {
+            try {
+              await updateOrderStatus(o.order_id, "Cancelled");
+              showToast(`Order #${o.order_id} cancelled`);
+              await loadOrders();
+            } catch (err) {
+              showToast(err.message || "Failed to update order", "error");
+            }
+          });
 
-cancelBtn.addEventListener('click', () => {
-  updateOrderStatus(o.order_id, "Cancelled");
-});
+          grid.appendChild(card);
+        });
 
+      } catch (err) {
+        console.error(err);
+        const grid = document.getElementById('ordersGrid');
+        grid.innerHTML = `
+          <div class="text-center text-red-500 col-span-full">
+            Error loading orders.
+          </div>
+        `;
+      }
+    }
 
-grid.appendChild(card);
-});
-} catch (err) {
-  showToast("Error loading orders", "error");
-  console.error(err);
-}
-}
-  document.addEventListener('DOMContentLoaded', loadOrders);
+    document.getElementById('refreshBtn').addEventListener('click', loadOrders);
+    document.addEventListener('DOMContentLoaded', loadOrders);
+
+    // Optional auto-refresh every 10s
+    setInterval(loadOrders, 10000);
   </script>
 
 </body>
-</html> 
+</html>
