--- a/Restaurant Ordering System/public_html/Employee/employee_menu.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_menu.html
@@ -11,11 +11,20 @@
   <!-- Header -->
   <header class="bg-white shadow p-4 flex justify-between items-center">
     <h1 class="text-2xl font-bold text-gray-800">Employee Menu</h1>
-    <nav class="flex gap-3">
-      <a href="employee_main.html" class="text-blue-600 hover:underline">Home</a>
-      <a href="employee_order.html" class="text-blue-600 hover:underline">View Orders</a>
-      <a href="employee_login.html" class="text-blue-600 hover:underline">Logout</a>
-    </nav>
+    <div class="flex gap-2">
+      <a href="employee_main.html"
+      class="bg-gray-100 text-gray-800 px-3 py-1 rounded border border-gray-300 hover:bg-gray-200 transition text-sm">
+      Home
+      </a>
+      <a href="employee_order.html"
+         class="bg-gray-100 text-gray-800 px-3 py-1 rounded border border-gray-300 hover:bg-gray-200 transition text-sm">
+         View Orders
+      </a>
+      <a href="employee_login.html"
+         class="bg-blue-600 text-white px-3 py-1 rounded shadow hover:bg-blue-700 transition text-sm">
+         Logout
+      </a>
+    </div>
   </header>
   
   <!-- Main Section -->
